# bank-parser

./: Cargo.toml  README.md
src/: n26.toml
