[package]
name = "bank-parser"
version = "0.1.0"
authors = ["Andre Jasiskis <midea.andre@gmail.com>"]
edition = "2018"
default_run = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
toml = "0.5"
serde_derive = "1.0.102"
serde = "1"
csv = "1.1.1"
tempfile = "3"
